# riscv-sim

./: .clangd  .gitignore  ;  CMakeLists.txt  README.md
.github/workflows/: workflow.yaml
flags/: CMakeLists.txt
src/: main.cpp
src/helpers/: CMakeLists.txt
src/helpers/include/helpers/: common.hpp  trace_calls.hpp  traceable_exception.hpp
src/isa/: CMakeLists.txt
src/isa/include/isa/: ext_f.inc  ext_f_cb.hpp  ext_i.inc  ext_i_cb.hpp  ext_m.inc  ext_m_cb.hpp  ext_zbb.inc  ext_zbb_cb.hpp  ext_zicsr.inc  ext_zicsr_cb.hpp  isa_cb.hpp  isa_defs.hpp  isa_ext.inc  isa_hlp.hpp  mnemonics.hpp  rv_csr_insn.hpp  rv_insn.hpp  rvf_insn.hpp  syscall_handler.hpp
src/isa/source/: ext_f_cb.cpp  ext_i_cb.cpp  ext_m_cb.cpp  ext_zbb_cb.cpp  ext_zicsr_cb.cpp  mnemonics.cpp  syscall_handler.cpp
src/sim/: CMakeLists.txt
src/sim/include/sim/: decode.hpp  dispatch.hpp  elf_loader.hpp  memory.hpp  memory_segm.hpp  program_args.hpp  rv_sim.hpp  sim_defs.hpp
src/sim/source/: decode.cpp  dispatch.cpp  elf_loader.cpp  memory.cpp  rv_sim.cpp
tests/: add_sub.s  addi.s  bitop_minmax.s  branches.s  build_and_run_tests.sh  build_tests.sh  div.s  divu.s  dyn_rm.s  elf_run.s  ext_count.s  f_arth.s  fib_it.s  fib_rec.s  gcd.s  jal.s  jalr.s  logic.s  lui_auipc.s  mul.s  rotate_byteop.s  rw_syscalls.s  set_less.s  shifts.s  st_ld.s  zicsr_basic.s
tests/compute_heavy_test/: api.s  build.sh  clean.sh  echo_test.c  prime.c  prime_m.c
